fix syntax for readability

--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -11,14 +11,34 @@
  * It is generally better to create a new file per style scope.
  **/
 
- .searchable-container {margin:20px 0 0 0}
- .searchable-container label.btn-default.active{background-color:#007ba7;color:#FFF}
- .searchable-container label.btn-default{width:90%;border:1px solid #efefef;margin:5px; box-shadow:5px 8px 8px 0 #ccc;}
- .searchable-container label .bizcontent{width:100%;}
- .searchable-container .btn-group{width:90%}
+ .searchable-container {
+   margin:20px 0 0 0;
+ }
+
+ .searchable-container label.btn-default.active {
+   background-color:#007ba7;
+   color:#FFF;
+ }
+
+ .searchable-container label.btn-default{
+   width:90%;
+   border:1px solid #efefef;
+   margin:5px;
+   box-shadow:5px 8px 8px 0 #ccc;
+ }
+
+ .searchable-container label .bizcontent {
+   width:100%;
+ }
+
+ .searchable-container .btn-group {
+   width:90%;
+ }
+
  .searchable-container .btn span.glyphicon{
      opacity: 0;
  }
+
  .searchable-container .btn.active span.glyphicon {
      opacity: 1;
  }
@@ -28,6 +48,7 @@
    position:fixed;
    z-index: 2;
  }
+
  .dropdown-arrow {
    width: 5%;
  }
@@ -36,15 +57,16 @@
    width: 100%;
    height: 15vh;
  }
+
 .cyclic-random-button,
 .true-random-button {
   width: 186.9px;
   height:5vh;
 }
+
 #nav-bar-right {
   position:fixed;
   height: 100vh;
-
   top: 50px;
   right: 0;
   z-index: 1;
@@ -57,9 +79,11 @@
   width: 100%;
   height:20vh;
 }
+
 .home-content{
   margin-top: 4%;
 }
+
 body {
     background-image: url('http://partysaints.co.uk/wp-content/uploads/2016/07/background-for-website.jpg');
     -moz-background-size: cover;
@@ -69,12 +93,15 @@ body {
     background-repeat: no-repeat !important;
     background-attachment: fixed;
 }
+
 .teams {
   margin-top: 5%
 }
+
 .instructions {
   margin-top: 10%;
 }
+
 .dropdown {
   width: 100%;
   height: 5vh;
@@ -83,9 +110,11 @@ body {
 .team-name {
   color: white;
 }
+
 .team-name:hover{
   color:gray;
 }
+
 .dropdown-toggle {
   color: white;
 }
@@ -97,9 +126,11 @@ body {
 .gray {
   color: blue;
 }
+
 .bizcontent {
   width: auto;
 }
+
 .students-form {
   width: 30%;
 }
@@ -107,16 +138,20 @@ body {
 .student-name {
   letter-spacing: 2px;
 }
+
 .students-search {
   left: 35%;
 }
+
 .modal-header {
   padding:35px 50px;
 }
+
 .dropdown-toggle:hover {
   text-decoration: none;
   color: gray;
 }
+
 .dropdown-menu {
   width:100%;
 }
@@ -124,9 +159,11 @@ body {
 .github-img {
   width: 2%;
 }
+
 .center {
   text-align: center;
 }
+
 .profile {
     width: 400px;
     height: 400px;
